--- a/values.yaml
+++ b/values.yaml
@@ -20,18 +20,27 @@ connections:
   mysqlExistingSecret: "mysql"
   mysqlSecretKeyPassword: "mysql-password"
   mysqlSecretKeyRootPassword: "mysql-root-password"
-  appDotnetEnv: "test"
+  appProduct: "onlyoffice"
+  appBaseDir: ""
+  appUrls: ""
+  appConfPath: ""
+  appLogDir: ""
   appCoreBaseDomain: "localhost"
   appCoreMachinekey: "your_core_machinekey"
-  DocumentServerUrlPublic: "/ds-vpath/"
-  DocumentServerUrlInternal: "http://onlyoffice-document-server/"
-  DocumentServerUrlConverter: "/ds-vpath/ConvertService.ashx"
-  AppUrlPortal: "http://onlyoffice-proxy:8092"
+  documentServerUrlPublic: "/ds-vpath/"
+  documentServerUrlInternal: "http://onlyoffice-document-server/"
+  documentServerUrlConverter: "/ds-vpath/ConvertService.ashx"
+  appUrlPortal: "http://onlyoffice-proxy:8092"
+  appStorageRoot: ""
   redisHost: "redis-master"
   rabbitHost: "rabbitmq"
   kafkaHost: "onlyoffice-kafka"
+  elkSheme: "http"
   elkHost: "elasticsearch-master"
+  elkPort: "9200"
+  elkThreads: "1"
   proxyHost: "onlyoffice-proxy"
+  routerHost: "localhost"
   countWorkerConnections: "1024"
   nginxSnvsubstTemplateSuffix: ".template"
   serviceKeepalive: "64"
@@ -203,7 +212,8 @@ imagePullSecrets: ""
 
 extraConf:
   secretName: ""
-  fileName: appsettings.json
+  fileName:
+    - appsettings.test.json
 
 ## App common deployment parameters
 ## This block defines common parameters for all deployments only
