--- a/templates/services/onlyoffice-proxy-frontend.yaml
+++ b/templates/services/onlyoffice-proxy-frontend.yaml
@@ -1,4 +1,4 @@
-{{- if .Values.proxyFrontend.enabled }}
+{{- if and .Values.proxyFrontend.enabled (eq (include "app.svc.proxyFrontend.create" .) "true") }}
 apiVersion: v1
 kind: Service
 metadata:
