--- a/templates/configmaps/app.yaml
+++ b/templates/configmaps/app.yaml
@@ -3,7 +3,7 @@ kind: ConfigMap
 metadata:
   name: app-all
   annotations:
-    "helm.sh/hook": pre-install
+    "helm.sh/hook": pre-install,pre-upgrade
     "helm.sh/hook-weight": "1"
 data:
   ENV_EXTENSION: {{ .Values.connections.envExtension | quote }}
