--- a/values.yaml
+++ b/values.yaml
@@ -395,6 +395,7 @@ proxyFrontend:
 ## This block defines parameters for the document server StatefulSet only
 
 docs:
+  enabled: true
   image:
     repository: onlyoffice/documentserver
     tag: 7.1.1
