--- a/templates/statefulset/onlyoffice-doceditor.yaml
+++ b/templates/statefulset/onlyoffice-doceditor.yaml
@@ -80,14 +80,14 @@ spec:
           name: app
         - containerPort: {{ .Values.containerPorts.doceditor }}
           name: doceditor
-        {{- if .Values.readinessProbe.enabled }}
-        readinessProbe: {{- omit .Values.readinessProbe "enabled" | toYaml | nindent 10 }}
+        {{- if .Values.onlyofficeDoceditor.startupProbe.enabled }}
+        startupProbe: {{- omit .Values.onlyofficeDoceditor.startupProbe "enabled" | toYaml | nindent 10 }}
         {{- end }}
-        {{- if .Values.livenessProbe.enabled }}
-        livenessProbe: {{- omit .Values.livenessProbe "enabled" | toYaml | nindent 10 }}
+        {{- if .Values.onlyofficeDoceditor.readinessProbe.enabled }}
+        readinessProbe: {{- omit .Values.onlyofficeDoceditor.readinessProbe "enabled" | toYaml | nindent 10 }}
         {{- end }}
-        {{- if .Values.startupProbe.enabled }}
-        startupProbe: {{- omit .Values.startupProbe "enabled" | toYaml | nindent 10 }}
+        {{- if .Values.onlyofficeDoceditor.livenessProbe.enabled }}
+        livenessProbe: {{- omit .Values.onlyofficeDoceditor.livenessProbe "enabled" | toYaml | nindent 10 }}
         {{- end }}
         resources: {{- toYaml .Values.resources | nindent 10 }}
         {{- if .Values.containerSecurityContext.enabled }}
