--- a/templates/statefulset/onlyoffice-login.yaml
+++ b/templates/statefulset/onlyoffice-login.yaml
@@ -77,14 +77,14 @@ spec:
         ports:
         - containerPort: {{ .Values.containerPorts.login }}
           name: login
-        {{- if .Values.readinessProbe.enabled }}
-        readinessProbe: {{- omit .Values.readinessProbe "enabled" | toYaml | nindent 10 }}
+        {{- if .Values.onlyofficeLogin.startupProbe.enabled }}
+        startupProbe: {{- omit .Values.onlyofficeLogin.startupProbe "enabled" | toYaml | nindent 10 }}
         {{- end }}
-        {{- if .Values.livenessProbe.enabled }}
-        livenessProbe: {{- omit .Values.livenessProbe "enabled" | toYaml | nindent 10 }}
+        {{- if .Values.onlyofficeLogin.readinessProbe.enabled }}
+        readinessProbe: {{- omit .Values.onlyofficeLogin.readinessProbe "enabled" | toYaml | nindent 10 }}
         {{- end }}
-        {{- if .Values.startupProbe.enabled }}
-        startupProbe: {{- omit .Values.startupProbe "enabled" | toYaml | nindent 10 }}
+        {{- if .Values.onlyofficeLogin.livenessProbe.enabled }}
+        livenessProbe: {{- omit .Values.onlyofficeLogin.livenessProbe "enabled" | toYaml | nindent 10 }}
         {{- end }}
         resources: {{- toYaml .Values.resources | nindent 10 }}
         {{- if .Values.containerSecurityContext.enabled }}
