--- a/values.yaml
+++ b/values.yaml
@@ -255,6 +255,32 @@ onlyofficeProxy:
   extraConf:
     configMap: ""
     fileName: "10.upstream.conf.upstream"
+  startupProbe:
+    enabled: false
+    httpGet:
+      path: /
+      port: 8092
+    failureThreshold: 30
+    periodSeconds: 10
+  readinessProbe:
+    enabled: false
+    failureThreshold: 2
+    httpGet:
+      path: /
+      port: 8092
+    periodSeconds: 10
+    successThreshold: 1
+    timeoutSeconds: 3
+  livenessProbe:
+    enabled: false
+    failureThreshold: 5
+    httpGet:
+      path: /
+      port: 8092
+    periodSeconds: 10
+    successThreshold: 1
+    timeoutSeconds: 3
+    initialDelaySeconds: 45
 
 ## App Calendar deployment parameters
 ##
