--- a/values.yaml
+++ b/values.yaml
@@ -178,7 +178,6 @@ service:
     port:
       external: 8092
     type: ClusterIP
-
   proxyFrontend:
     existing: ""
     annotations: {}
@@ -464,16 +463,16 @@ proxyFrontend:
   startupProbe:
     enabled: false
     httpGet:
-      path: /liveness
-      port: 8888
+      path: /
+      port: 80
     failureThreshold: 30
     periodSeconds: 10
   readinessProbe:
     enabled: false
     failureThreshold: 2
     httpGet:
-      path: /liveness
-      port: 8888
+      path: /
+      port: 80
     periodSeconds: 10
     successThreshold: 1
     timeoutSeconds: 3
@@ -481,8 +480,8 @@ proxyFrontend:
     enabled: false
     failureThreshold: 5
     httpGet:
-      path: /liveness
-      port: 8888
+      path: /
+      port: 80
     periodSeconds: 10
     successThreshold: 1
     timeoutSeconds: 3
