--- a/templates/statefulset/onlyoffice-socket.yaml
+++ b/templates/statefulset/onlyoffice-socket.yaml
@@ -79,14 +79,14 @@ spec:
           name: app
         - containerPort: {{ .Values.containerPorts.socket }}
           name: sock
-        {{- if .Values.readinessProbe.enabled }}
-        readinessProbe: {{- omit .Values.readinessProbe "enabled" | toYaml | nindent 10 }}
+        {{- if .Values.onlyofficeSocket.startupProbe.enabled }}
+        startupProbe: {{- omit .Values.onlyofficeSocket.startupProbe "enabled" | toYaml | nindent 10 }}
         {{- end }}
-        {{- if .Values.livenessProbe.enabled }}
-        livenessProbe: {{- omit .Values.livenessProbe "enabled" | toYaml | nindent 10 }}
+        {{- if .Values.onlyofficeSocket.readinessProbe.enabled }}
+        readinessProbe: {{- omit .Values.onlyofficeSocket.readinessProbe "enabled" | toYaml | nindent 10 }}
         {{- end }}
-        {{- if .Values.startupProbe.enabled }}
-        startupProbe: {{- omit .Values.startupProbe "enabled" | toYaml | nindent 10 }}
+        {{- if .Values.onlyofficeSocket.livenessProbe.enabled }}
+        livenessProbe: {{- omit .Values.onlyofficeSocket.livenessProbe "enabled" | toYaml | nindent 10 }}
         {{- end }}
         resources: {{- toYaml .Values.resources | nindent 10 }}
         {{- if .Values.containerSecurityContext.enabled }}
