--- a/values.yaml
+++ b/values.yaml
@@ -401,6 +401,66 @@ onlyofficeLogin:
     timeoutSeconds: 3
     initialDelaySeconds: 45
 
+## App Url Shortener statefulset parameters
+##
+onlyofficeUrlShortener:
+  startupProbe:
+    enabled: false
+    httpGet:
+      path: /liveness
+      port: 5050
+    failureThreshold: 30
+    periodSeconds: 10
+  readinessProbe:
+    enabled: false
+    failureThreshold: 2
+    httpGet:
+      path: /liveness
+      port: 5050
+    periodSeconds: 10
+    successThreshold: 1
+    timeoutSeconds: 3
+  livenessProbe:
+    enabled: false
+    failureThreshold: 5
+    httpGet:
+      path: /liveness
+      port: 5050
+    periodSeconds: 10
+    successThreshold: 1
+    timeoutSeconds: 3
+    initialDelaySeconds: 45
+
+## App Socket statefulset parameters
+##
+onlyofficeSocket:
+  startupProbe:
+    enabled: false
+    httpGet:
+      path: /liveness
+      port: 5050
+    failureThreshold: 30
+    periodSeconds: 10
+  readinessProbe:
+    enabled: false
+    failureThreshold: 2
+    httpGet:
+      path: /liveness
+      port: 5050
+    periodSeconds: 10
+    successThreshold: 1
+    timeoutSeconds: 3
+  livenessProbe:
+    enabled: false
+    failureThreshold: 5
+    httpGet:
+      path: /liveness
+      port: 5050
+    periodSeconds: 10
+    successThreshold: 1
+    timeoutSeconds: 3
+    initialDelaySeconds: 45
+
 ## App ingress parameters
 ## This block defines parameters for the Nginx ingress only
 ##
