--- a/templates/statefulset/onlyoffice-proxy-frontend.yaml
+++ b/templates/statefulset/onlyoffice-proxy-frontend.yaml
@@ -28,6 +28,12 @@ spec:
       {{- if .Values.proxyFrontend.podSecurityContext.enabled }}
       securityContext: {{- omit .Values.proxyFrontend.podSecurityContext "enabled" | toYaml | nindent 8 }}
       {{- end }}
+      {{- if .Values.nodeSelector }}
+      nodeSelector: {{ toYaml .Values.nodeSelector | nindent 8 }}
+      {{- end }}
+      {{- if .Values.tolerations }}
+      tolerations: {{ toYaml .Values.tolerations | nindent 8 }}
+      {{- end }}
       {{- if .Values.imagePullSecrets }}
       imagePullSecrets:
       - name: {{ .Values.imagePullSecrets }}
