--- a/templates/services/onlyoffice-api-system.yaml
+++ b/templates/services/onlyoffice-api-system.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.onlyofficeApiSystem.enabled }}
 apiVersion: v1
 kind: Service
 metadata:
@@ -12,3 +13,4 @@ spec:
   selector:
     statefulset.kubernetes.io/pod-name: onlyoffice-api-system-0
   type: ClusterIP
+{{- end }}
