--- a/templates/services/onlyoffice-migration.yaml
+++ b/templates/services/onlyoffice-migration.yaml
@@ -1,4 +1,4 @@
-{{- if eq .Values.product.name "docspace" }}
+{{- if and (eq .Values.product.name "docspace") .Values.onlyofficeMigration.enabled }}
 apiVersion: v1
 kind: Service
 metadata:
