--- a/templates/services/onlyoffice-webhooks-service.yaml
+++ b/templates/services/onlyoffice-webhooks-service.yaml
@@ -1,4 +1,4 @@
-{{- if eq .Values.product.name "docspace" }}
+{{- if and (eq .Values.product.name "docspace") .Values.onlyofficeWebhooksService.enabled }}
 apiVersion: v1
 kind: Service
 metadata:
