--- a/templates/statefulset/onlyoffice-urlshortener.yaml
+++ b/templates/statefulset/onlyoffice-urlshortener.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.onlyofficeUrlShortener.enabled }}
 apiVersion: apps/v1
 kind: StatefulSet
 metadata:
@@ -163,3 +164,4 @@ spec:
         persistentVolumeClaim:
           claimName: mail-data
       {{- end }}
+{{- end }}
