--- a/templates/statefulset/onlyoffice-webhooks-service.yaml
+++ b/templates/statefulset/onlyoffice-webhooks-service.yaml
@@ -1,4 +1,4 @@
-{{- if eq .Values.product.name "docspace" }}
+{{- if and (eq .Values.product.name "docspace") .Values.onlyofficeWebhooksService.enabled }}
 apiVersion: apps/v1
 kind: StatefulSet
 metadata:
